--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
+    "dompurify": "^3.2.4",
     "framer-motion": "^11.16.0",
     "package-name": "^0.1.0",
     "react": "^18.2.0",
