--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "web-vitals": "^4.2.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,5 +55,9 @@
   },
   "devDependencies": {
     "webpack": "^5.98.0"
-  }
+  },
+
+  "proxy": [ "https://www.slpa.lk"
+  ]
+  
 }
